--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>Basics:</h2>
     <ul>
         <li>Grew up in Northern Virginia</li>
-        <li>Studied CS & Finance at UVA for some time</li>
+        <li>Studied CS & Finance at UVA</li>
         <li>Living in San Francisco, CA</li>
         <ul>
             <li>NYC next</li>
