--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <ul>
         <li>Grew up in Northern Virginia</li>
         <li>Studied CS & Finance at UVA</li>
-        <li>Living in San Francisco, CA</li>
+        <li>Living in San Francisco</li>
         <ul>
             <li>NYC next</li>
         </ul>
