--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             text-decoration: underline;
         }
 
+        /* Underline only Endeavors section links */
+        .endeavors a {
+            text-decoration: underline;
+        }
+
         /* Mobile responsiveness */
         @media (max-width: 600px) {
             body {
@@ -62,11 +67,13 @@
     </ul>
 
     <h2>Endeavors:</h2>
-    <ul>
-        <li><a href="https://thecannonproject.com" target="_blank">TCP</a></li>
-        <li><a href="https://zfellows.com" target="_blank">Z Fellows</a></li>
-        <li><a href="https://yesterdayy.com" target="_blank">Yesterday Media</a></li>
-    </ul>
+    <div class="endeavors">
+        <ul>
+            <li><a href="https://thecannonproject.com" target="_blank">TCP</a></li>
+            <li><a href="https://zfellows.com" target="_blank">Z Fellows</a></li>
+            <li><a href="https://yesterdayy.com" target="_blank">Yesterday Media</a></li>
+        </ul>
+    </div>
 
     <h2>Writings (coming soon).</h2>
 
