--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <h2>Basics:</h2>
     <ul>
         <li>Grew up in Northern Virginia</li>
-        <li>Studied at UVA for some time</li>
-        <li>Living in San Francisco, CA
+        <li>Studied CS & Finance at UVA</li>
+        <li>Living in San Francisco
             <ul>
                 <li>NYC next</li>
             </ul>
@@ -94,7 +94,6 @@
                 <li>I took 10 flights in April — this is the most I’ve ever traveled</li>
             </ul>
         </li>
-        <li>X is one of the most useful apps I have</li>
         <li>Everything is a built skill
             <ul>
                 <li>Communication is the most important</li>
