--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 <li>Compensation is tied to how replaceable you are</li>
             </ul>
         </li>
+        <li>Being in excellent shape has asymmetric upside in life
+            <ul>
+                <li>You can't cheat it and everyone can achieve this</li>
+            </ul>
+        </li>
         <li>The harder you work, the luckier you get
             <ul>
                 <li>True luck still exists</li>
