--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </li>
         <li>Life is about doing good things with good people
             <ul>
-                <li>Compensation is tied to how replaceable you are</li>
+                <li>Compensation is tied to how replaceable you are and your appetite for risk</li>
             </ul>
         </li>
         <li>Being in excellent shape has asymmetric upside in life
