--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
         <ul>
             <li><a href="https://zfellows.com" target="_blank">Z Fellows</a></li>
             <li><a href="https://thecannonproject.com" target="_blank">TCP</a></li>
-            <li><a href="https://yesterdayy.com" target="_blank">Yesterday Media</a></li>
+            <li><a href="https://yesterdayy.com" target="_blank">Yesterday Media</a>
+                <ul>
+                    <li><a href="https://www.youtube.com/@yesterdaypodcast" target="_blank">YouTube</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 
@@ -101,12 +105,12 @@
         </li>
         <li>Life is about doing good things with good people
             <ul>
-                <li>Compensation is tied to how replaceable you are and your appetite for risk</li>
+                <li>Compensation is tied to your replaceability and appetite for risk</li>
             </ul>
         </li>
         <li>Being in excellent shape has asymmetric upside in life
             <ul>
-                <li>You can't cheat it and everyone can achieve this</li>
+                <li>You can't cheat or buy this</li>
             </ul>
         </li>
         <li>The harder you work, the luckier you get
