--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </li>
         <li>Life is about doing good things with good people
             <ul>
-                <li>Compensation is tied to your replaceability and appetite for risk</li>
+                <li>Compensation is tied to your appetite for risk and replaceability</li>
             </ul>
         </li>
         <li>Being in excellent shape has asymmetric upside in life
