--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <h2>Basics:</h2>
     <ul>
         <li>Grew up in Northern Virginia</li>
-        <li>Studied CS & Finance at UVA</li>
-        <li>Living in San Francisco
+        <li>Studied at UVA</li>
+        <li>Living in SF
             <ul>
                 <li>NYC next</li>
             </ul>
@@ -79,7 +79,7 @@
         </ul>
     </div>
 
-    <h2>Writings (coming soon).</h2>
+    <h2>Writings:</h2>
 
     <h2>Publishings I like:</h2>
     <ul>
