--- a/index.html
+++ b/index.html
@@ -53,33 +53,6 @@ a.subtle-link:hover {
 }
 
 
-        /* body {
-            background-color: #f5f1e9;
-            color: black;
-            font-family: Times, serif;
-            font-size: 17px;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 0 auto;
-            padding: 70px 20px 40px 20px;
-        }
-        h1 {
-            font-weight: bold;
-            font-size: 27px;
-        }
-        h2 {
-            font-weight: bold;
-            font-size: 19px;
-            margin-top: 26px;
-        }
-        a {
-            color: black;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-
         /* Underline only Endeavors section links */
         .endeavors a {
             text-decoration: underline;
@@ -115,96 +88,8 @@ a.subtle-link:hover {
 
         <hr>
 
-        <p>Essays | Publishings I Like | Thoughts</p>
+        <p><strong><a class="subtle-link" href="Essays.html">Essays</a> | <a class="subtle-link" href="Publishings.html">Publishings I Like</a> 
+            | <a class="subtle-link" href="Thoughts.html">Thoughts</a></strong></p>
     </div>
 </body>
-
-<!-- <body>
-    <h1><a href="https://x.com/_sonith" target="_blank">Sonith Sunku</a></h1>
-
-
-        <p>I live in California.</p>
-
-        <p>I help run Z Fellows and previously joined TCP.</p>
-
-        <p>Recently, I started Yesterday Media. We interview individuals across industries, focused on their story from childhood to the present day. 
-            Much of what we record hasn't been shared publicly.</p>
-
-        <p>Episodes release weekly across platforms, accompanied by a written biography on each guest.</p>
-
-         <hr>
-
-         <p>Essays | Publishings I Like | Random Thoughts</p>
-     -->
-    
-    <!-- <h2>Basics:</h2>
-    <ul>
-        <li>Grew up in Northern Virginia</li>
-        <li>Studied at UVA</li>
-        <li>Living in SF
-            <ul>
-                <li>NYC next</li>
-            </ul>
-        </li>
-    </ul> -->
-
-    <!-- <h2>Endeavors:</h2>
-    <div class="endeavors">
-        <ul>
-            <li><a href="https://zfellows.com" target="_blank">Z Fellows</a></li>
-            <li><a href="https://thecannonproject.com" target="_blank">TCP</a></li>
-            <li><a href="https://yesterdayy.com" target="_blank">Yesterday Media</a>
-                <ul>
-                    <li><a href="https://www.youtube.com/@yesterdaypodcast" target="_blank">YouTube</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
-    <h2>Writings:</h2>
-
-    <h2>Publishings I like:</h2>
-    <ul>
-        <li>How to Win Friends and Influence People (Dale Carnegie)</li>
-        <li>Never Split the Difference (Chris Voss)</li>
-        <li>How To Be Successful (Sam Altman)</li>
-        <li>Shoe Dog (Phil Knight)</li>
-        <li>Keep Your Identity Small (Paul Graham)</li>
-        <li>You Could Just Choose Optimism (Carter Mark and Jordan Gonen)</li>
-    </ul>
-
-    <h2>Random:</h2>
-    <ul>
-        <li>I’ve averaged a flight a week this year
-            <ul>
-                <li>I took 10 flights in April — this is the most I’ve ever traveled</li>
-            </ul>
-        </li>
-        <li>Everything is a built skill
-            <ul>
-                <li>Communication is the most important</li>
-            </ul>
-        </li>
-        <li>Life is about doing good things with good people
-            <ul>
-                <li>Compensation is tied to your appetite for risk and replaceability</li>
-            </ul>
-        </li>
-        <li>Being in excellent shape has asymmetric upside in life
-            <ul>
-                <li>You can't cheat or buy this</li>
-            </ul>
-        </li>
-        <li>The harder you work, the luckier you get
-            <ul>
-                <li>True luck still exists</li>
-            </ul>
-        </li>
-        <li>I love meeting new people, ideally in person. The city doesn’t matter.
-            <ul>
-                <li>Email and X work well. A warm intro works best.</li>
-            </ul>
-        </li>
-    </ul> -->
-<!-- </body> -->
 </html>
