--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@ a.subtle-link:hover {
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We interview individuals across industries, focused on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
-
+        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>.</p>
+        
+        <p>We interview individuals across industries, focusing on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
 
         <p>Episodes release weekly across platforms, alongside a written biography on each guest.</p>
 
