--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a.subtle-link:hover {
 
         <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>.</p>
         
-        <p>We interview individuals across industries, focusing on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
+        <p>I interview individuals across industries, focusing on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
 
         <p>Episodes release weekly across platforms, alongside a written biography on each guest.</p>
 
