--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@ a.subtle-link:hover {
     opacity: 0.85;  /* optional subtle hover effect */
 }
 
+.back-button {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 6px 12px;
+    border: .5px solid black;
+    font-family: Times, serif;
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+.back-button:hover {
+    background-color: #f0f0f0; /* Optional subtle hover effect */
+}
+
+
 
         /* Underline only Endeavors section links */
         .endeavors a {
@@ -77,13 +95,14 @@ a.subtle-link:hover {
     <div class="container">
         <h1><a href="https://x.com/_sonith" target="_blank">Sonith Sunku</a></h1>
 
+        <a href="index.html" class="back-button">Home</a>
+
         <p>I live in California.</p>
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>.</p>
-        
-        <p>I interview individuals across industries, focusing on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
+        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We interview individuals across industries, focused on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
+
 
         <p>Episodes release weekly across platforms, alongside a written biography on each guest.</p>
 
