--- a/Thoughts.html
+++ b/Thoughts.html
@@ -89,6 +89,23 @@ a.subtle-link:hover {
     left: 0;
     top: 0;
 }
+        
+.back-button {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 6px 12px;
+    border: .5px solid black;
+    font-family: Times, serif;
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+.back-button:hover {
+    background-color: #f0f0f0; /* Optional subtle hover effect */
+}
 
         /* Underline only Endeavors section links */
         .endeavors a {
@@ -113,6 +130,8 @@ a.subtle-link:hover {
 <body>
     <div class="container">
         <h1>Thoughts</h1>
+
+        <a href="index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
         <li>I’ve averaged a flight a week this year
