--- a/Essays.html
+++ b/Essays.html
@@ -70,6 +70,24 @@ a.subtle-link:hover {
     top: 0;
 }
 
+.back-button {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 6px 12px;
+    border: .5px solid black;
+    font-family: Times, serif;
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+.back-button:hover {
+    background-color: #f0f0f0; /* Optional subtle hover effect */
+}
+
+
 
 
         
@@ -96,6 +114,8 @@ a.subtle-link:hover {
 <body>
     <div class="container">
         <h1>Essays</h1>
+
+         <a href="index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
             <li>Why</li>
