--- a/Essays.html
+++ b/Essays.html
@@ -81,6 +81,7 @@ a.subtle-link:hover {
     color: black;
     background-color: transparent;
     font-size: 14px;
+    z-index: 1000;  
 }
 
 .back-button:hover {
