--- a/Publishings.html
+++ b/Publishings.html
@@ -83,6 +83,7 @@ a.subtle-link:hover {
     color: black;
     background-color: transparent;
     font-size: 14px;
+    z-index: 1000;  
 }
 
 .back-button:hover {
