--- a/Thoughts.html
+++ b/Thoughts.html
@@ -101,6 +101,7 @@ a.subtle-link:hover {
     color: black;
     background-color: transparent;
     font-size: 14px;
+     z-index: 1000;  
 }
 
 .back-button:hover {
