--- a/Essays.html
+++ b/Essays.html
@@ -122,6 +122,8 @@ a.subtle-link:hover {
             <li>Why</li>
         <li>70+ Years</li>
         <li>The realization</li>
+            <li>Cold Outreach</li>
+            <li>San Francisco & New York</li>
         </ul>
 
             
