--- a/Essays.html
+++ b/Essays.html
@@ -124,6 +124,7 @@ a.subtle-link:hover {
         <li>The realization</li>
             <li>Cold Outreach</li>
             <li>San Francisco & New York</li>
+            <li>x.com</li>
         </ul>
 
             
