--- a/Essays.html
+++ b/Essays.html
@@ -125,6 +125,8 @@ a.subtle-link:hover {
             <li>Cold Outreach</li>
             <li>San Francisco & New York</li>
             <li>x.com</li>
+            <li>Circle of Reference</li>
+            <li>Black Swans</li>
         </ul>
 
             
