--- a/Essays.html
+++ b/Essays.html
@@ -119,7 +119,7 @@ a.subtle-link:hover {
          <a href="index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
-            <li>Why</li>
+            <li><a class="subtle-link" href="why.html">Why</a></li>
         <li>70+ Years</li>
         <li>The realization</li>
             <li>Cold Outreach</li>
