--- a/why.html
+++ b/why.html
@@ -130,7 +130,7 @@ a.subtle-link:hover {
         <div class="container">
         <div class="title-row">
             <h1>Why</h1>
-              <span class="timestamp">June 15, 2025 – 4:43 PM</span>
+              <span class="timestamp">June 15, 2025 – 4:42 PM PST</span>
         </div>
 
         <a href="index.html" class="back-button">Home</a>
