--- a/why_publishing.html
+++ b/why_publishing.html
@@ -6,7 +6,7 @@
 
 <p>Now, this document includes my 2024 recap, useful learnings from a couple of relationships, what I consider the core pillars of people, ambitions of mine, reflections, those whom I can never repay, and many more topics. Reading this document would provide anyone with a high-level understanding of me and my life.</p>
 
-<p>On a random Wednesday, I met Sam Lessin over coffee at his house. Among other topics, I mentioned that I write a lot. He remarked that writing is one of the most useful things someone can do when young, urging me to publish and timestamp it publicly. It facilitates clarity of thought, potential foresight, and is one way to build a public image. For those that don't know, Sam has been writing for the past decade at wlessin.com.</p>
+<p>On a random Wednesday, I met Sam Lessin over coffee at his house. Among other topics, I mentioned that I write a lot. He remarked that writing is one of the most useful things someone can do when young, urging me to publish and timestamp it publicly. It facilitates clarity of thought, potential foresight, and is one way to build a public image. For those that don't know, Sam has been writing for the past decade at <a href="https://www.wlessin.com/" target="_blank">wlessin.com</a>.</p>
 
 <p>The difficulty here was that my writings, like I mentioned, were entries with thousands of words. I paid no attention to being concise and this obviously isn’t effective if others are going to read it. Sam refuted saying:</p>
 
