--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ a.subtle-link:hover {
 
         <hr>
 
-        <p><strong><a class="subtle-link" href="Essays.html">Essays</a> | <a class="subtle-link" href="Publishings.html">Publishings I Like</a> 
-            | <a class="subtle-link" href="Thoughts.html">Thoughts</a></strong></p>
+        <p><strong><a class="subtle-link" href="Essays/Essays.html">Essays</a> | <a class="subtle-link" href="Publishings/Publishings.html">Publishings I Like</a> 
+            | <a class="subtle-link" href="Thoughts/Thoughts.html">Thoughts</a></strong></p>
     </div>
 </body>
 </html>
