--- a/Publishings/Publishings.html
+++ b/Publishings/Publishings.html
@@ -116,7 +116,7 @@ a.subtle-link:hover {
     <div class="container">
         <h1>Publishings I like</h1>
 
-         <a href="index.html" class="back-button">Home</a>
+         <a href="/index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
             <li>How to Win Friends and Influence People (Dale Carnegie)</li>
