--- a/Thoughts/Thoughts.html
+++ b/Thoughts/Thoughts.html
@@ -132,7 +132,7 @@ a.subtle-link:hover {
     <div class="container">
         <h1>Thoughts</h1>
 
-        <a href="index.html" class="back-button">Home</a>
+        <a href="/index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
         <li>I’ve averaged a flight a week this year
