--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -116,7 +116,7 @@ a.subtle-link:hover {
     <div class="container">
         <h1>Essays</h1>
 
-         <a href="index.html" class="back-button">Home</a>
+         <a href="/index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
             <li><a class="subtle-link" href="Why/why.html">Why</a></li>
