--- a/Essays/Why/why.html
+++ b/Essays/Why/why.html
@@ -133,7 +133,7 @@ a.subtle-link:hover {
               <span class="timestamp">June 15, 2025 – 4:42 PM PT</span>
         </div>
 
-        <a href="index.html" class="back-button">Home</a>
+        <a href="/index.html" class="back-button">Home</a>
         <div id="essay-container">Loading essay...</div>
     </div>
 
