--- a/Essays/Why/why.html
+++ b/Essays/Why/why.html
@@ -138,7 +138,7 @@ a.subtle-link:hover {
     </div>
 
     <script>
-        fetch('text.html')
+        fetch('./text.html')
           .then(response => response.text())
           .then(data => {
             document.getElementById('essay-container').innerHTML = data;
