--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -88,6 +88,17 @@ a.subtle-link:hover {
     background-color: #f0f0f0; /* Optional subtle hover effect */
 }
 
+a.hover-link {
+  color: inherit;
+  text-decoration: none;
+  transition: opacity 0.2s ease-in-out;
+}
+
+a.hover-link:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
 
 
 
