--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -130,7 +130,7 @@ a.hover-link:hover {
          <a href="/index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
-            <li><a class="subtle-link" href="Why/why.html">Why</a></li>
+            <li><a class="hover-link" href="Why/why.html">Why</a></li>
         <li>70+ Years</li>
         <li>The realization</li>
             <li>Cold Outreach</li>
