--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -91,13 +91,31 @@ a.subtle-link:hover {
 a.hover-link {
   color: inherit;
   text-decoration: none;
-  transition: opacity 0.2s ease-in-out;
+/*   transition: opacity 0.2s ease-in-out; */
+  transition: border-bottom 0.2s ease;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 2px;
 }
 
 a.hover-link:hover {
   opacity: 0.7;
+  border-bottom: 1px solid #999;
   cursor: pointer;
 }
+
+/* a.hover-underline {
+  text-decoration: none;
+  color: inherit;
+  transition: border-bottom 0.2s ease;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 2px;
+}
+
+a.hover-underline:hover {
+  /* or a custom color */
+  cursor: pointer;
+} */
+
 
 
 
