--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -113,7 +113,7 @@ a.hover-link:hover {
 
 a.hover-underline:hover {
   /* or a custom color */
-  cursor: pointer;
+/*   cursor: pointer;
 } */
 
 
