--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@ a {
 a.subtle-link {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid #999;  /* subtle grey underline */
+    border-bottom: 1px solid transparent; /* placeholder to avoid layout shift */
     padding-bottom: 2px;
+    transition: opacity 0.2s ease, border-bottom-color 0.2s ease;
 }
 
 a.subtle-link:hover {
-    opacity: 0.7;  /* optional subtle hover effect */
+    opacity: 0.7;
+    border-bottom-color: #999; /* only shows on hover */
 }
 
 
