--- a/Essays/Why/why.html
+++ b/Essays/Why/why.html
@@ -131,6 +131,12 @@ a.subtle-link:hover {
         <div class="title-row">
             <h1>Why</h1>
               <span class="timestamp">June 15, 2025 – 4:42 PM PT</span>
+        
+
+        <a href="../Essays.html" class="back-button">Back</a>
+<!--         <div id="essay-container">Loading essay...</div> -->
+    </div>
+
             <p>I was asked an interview question that I couldn’t answer and decided to write about it. I wrote the question in bold text at the top of a Google Document, and 3 hours later had a few thousand words sprawled out. This document is now filled with tens of thousands of words and titled <em>Thoughts</em>.</p>
 
 <p>I never reached a conclusion to the original question. I still haven’t. But I gained immense clarity on my life after writing.</p>
@@ -154,10 +160,6 @@ a.subtle-link:hover {
 
 <p>Thanks, Sam.</p>
         </div>
-
-        <a href="Essays/Essays.html" class="back-button">Back</a>
-<!--         <div id="essay-container">Loading essay...</div> -->
-    </div>
 
     <script>
         fetch('./text.html')
