--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -147,7 +147,7 @@ a.hover-underline:hover {
          <a href="/index.html" class="back-button">Home</a>
 
         <ul class="dash-list">
-            <li><a class="hover-link" href="Why.html">Why</a></li>
+            <li><a class="hover-link" href="Why/Why.html">Why</a></li>
         <li>70+ Years</li>
         <li>The realization</li>
             <li>Cold Outreach</li>
