--- a/Essays/Why.html
+++ b/Essays/Why.html
@@ -133,7 +133,7 @@ a.subtle-link:hover {
               <span class="timestamp">June 15, 2025 – 4:42 PM PT</span>
         
 
-        <a href="../Essays.html" class="back-button">Back</a>
+        <a href="Essays.html" class="back-button">Back</a>
 <!--         <div id="essay-container">Loading essay...</div> -->
     </div>
 
