--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -148,7 +148,7 @@ a.hover-underline:hover {
 
         <ul class="dash-list">
             <li><a class="hover-link" href="Why.html">Why</a></li>
-        <li>70+ Years</li>
+        <li><a class="hover-link" href="70">70+ Years</a></li>
         <li>The realization</li>
             <li>Cold Outreach</li>
             <li>San Francisco & New York</li>
