--- a/Essays/70.html
+++ b/Essays/70.html
@@ -129,7 +129,7 @@ a.subtle-link:hover {
 <body>
         <div class="container">
         <div class="title-row">
-            <h1>Why</h1>
+            <h1>70+ Years</h1>
               <span class="timestamp">June 15, 2025 – 9:26 PM PT</span>
         
 
