--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -150,11 +150,13 @@ a.hover-underline:hover {
             <li><a class="hover-link" href="Why.html">Why</a></li>
         <li><a class="hover-link" href="70">70+ Years</a></li>
         <li>The realization</li>
-            <li>Cold Outreach</li>
-            <li>San Francisco & New York</li>
-            <li>x.com</li>
-            <li>Circle of Reference</li>
-            <li>Black Swans</li>
+        <li>Cold Outreach</li>
+        <li>San Francisco & New York</li>
+        <li>x.com</li>
+        <li>Circle of Reference</li>
+        <li>Black Swans</li>
+        <li>Optimism</li>
+        <li>Lifting Weights</li>
         </ul>
 
             
