--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -155,7 +155,7 @@ a.hover-underline:hover {
         <li>x.com</li>
         <li>Circle of Reference</li>
         <li>Black Swans</li>
-        <li>Optimism</li>
+        <li>Optimism & Failure</li>
         <li>Lifting Weights</li>
         </ul>
 
