--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -157,6 +157,7 @@ a.hover-underline:hover {
         <li>Black Swans</li>
         <li>Optimism & Failure</li>
         <li>Lifting Weights</li>
+        <li>Due Time</li>
         </ul>
 
             
