--- a/Essays/70.html
+++ b/Essays/70.html
@@ -136,9 +136,9 @@ a.subtle-link:hover {
         <a href="Essays.html" class="back-button">Back</a>
     </div>
 
-            <p>I believe that people will always get what they deserve in the long run.</p>
+            <p>I believe that anyone can get what they want in the long run.</p>
 
-<p>I’d peg this as analogous to Buffett’s long-only value investing framework. Good people (and businesses) compound meaningfully over time and accrue value accordingly. Whether this value is ascribed to capital, happiness, or any other metric doesn’t necessarily matter other than to the individual themself, and I believe that every individual will get what they deserve (and ideally want) in the long term.</p>
+<p>I’d peg this as analogous to Buffett’s long-only value investing framework. Good people (and businesses) compound meaningfully over time and accrue value accordingly. Whether this value is ascribed to capital, happiness, or any other metric doesn’t necessarily matter other than to the individual themself, and I believe that every individual can get what they want (and be willing to work for) in the long term.</p>
 
 <p>A meta-analysis by Roberts in 2007 points out that conscientiousness is the biggest predictor of “pronounced success” even after controlling for intelligence (r ≈ .2 - .3). The simple, yet obviously difficult, act of staying consistent outweighs short-term failures.</p>
 
@@ -148,7 +148,7 @@ a.subtle-link:hover {
 
 <p>Incentives must be aligned, in that a janitor wouldn’t fare well if they sought to amass money, so one must pursue something that has the ability to compound to their desires in the first place.</p>
 
-<p>Past that, life is like Buffett’s approach to markets, a self-correcting mechanism… and people will always get what they deserve in the long run.</p>
+<p>Past that, life is like Buffett’s approach to markets, a self-correcting mechanism… and people can always get what they want in the long run.</p>
 
         </div>
 
