--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ a.subtle-link {
     transition: opacity 0.2s ease, border-bottom-color 0.2s ease;
 }
 
-a.subtle-link:hover {
-    border-bottom-color: #999; /* only shows on hover */
+/* a.subtle-link:hover {
+    border-bottom-color: #999;
 }
-
+ */
 
         /* Underline only Endeavors section links */
         .endeavors a {
