--- a/index.html
+++ b/index.html
@@ -45,18 +45,23 @@ a:hover {
     text-decoration: underline; /* keeps underline on hover too */
 }
 
-a.subtle-link {
+/* a.subtle-link {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid transparent; /* placeholder to avoid layout shift */
+    border-bottom: 1px solid transparent; 
     padding-bottom: 2px;
     transition: opacity 0.2s ease, border-bottom-color 0.2s ease;
+} */
+
+a.subtle-link {
+    color: inherit;
+    text-decoration: underline;
 }
 
-/* a.subtle-link:hover {
+a.subtle-link:hover {
     border-bottom-color: #999;
 }
- */
+
 
         /* Underline only Endeavors section links */
         .endeavors a {
