--- a/Publishings/Publishings.html
+++ b/Publishings/Publishings.html
@@ -120,6 +120,7 @@ a.subtle-link:hover {
 
         <ul class="dash-list">
             <li>How to Win Friends and Influence People (Dale Carnegie)</li>
+            <li>Red Notice (Bill Browder)</li>
             <li>Never Split the Difference (Chris Voss)</li>
             <li>How To Be Successful (Sam Altman)</li>
             <li>Shoe Dog (Phil Knight)</li>
