--- a/Essays/Essays.html
+++ b/Essays/Essays.html
@@ -151,6 +151,7 @@ a.hover-underline:hover {
         <li><a class="hover-link" href="70">70+ Years</a></li>
         <li>The realization</li>
         <li>Cold Outreach</li>
+        <li>Competition Isn't As It Seems</li>
         <li>San Francisco & New York</li>
         <li>x.com</li>
         <li>Circle of Reference</li>
