--- a/index.html
+++ b/index.html
@@ -100,14 +100,15 @@ a.subtle-link:hover {
     <div class="container">
         <h1><a href="https://x.com/_sonith" target="_blank">Sonith Sunku</a></h1>
 
-        <p>I live in California.</p>
+        <p>I live in California & New York.</p>
 
         <p>I help run <a class="subtle-link" href="https://zfellows.com" target="_blank">Z Fellows</a> and previously joined <a class="subtle-link" href="https://thecannonproject.com" target="_blank">TCP</a>.</p>
 
-        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We interview individuals across industries, focused on their childhood to the present day. Much of what we record hasn't been shared publicly.</p>
+        <p>Recently, I started <a class="subtle-link" href="https://yesterdayy.com" target="_blank">Yesterday Media</a>. We interview individuals across industries, profiling their life story from childhood to the present day, via recorded interviews and written biographies.</p>
 
+        <p>Guests include the founders of Palantir, Tinder, Sweetgreen, Notion... investors at Thrive Capital, Emergence, Dragonfly, A*, Semianalysis.... and more.</p>
 
-        <p>Episodes release weekly across platforms, alongside a written biography on each guest.</p>
+        <p>I feel deeply grateful, proud, and privileged to spend my time working on great things with great people.</p>
 
         <hr>
 
