--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a.subtle-link:hover {
 
         <p>Guests include the founders of Palantir, Tinder, Sweetgreen, Notion; investors at Thrive Capital, Emergence, Dragonfly, A*, Semianalysis; and more.</p>
 
-        <p>I feel grateful, proud, and privileged to spend every day working on great things with great people.</p>
+        <p>I feel grateful, proud, and privileged to spend every day working on good things with good people.</p>
 
         <hr>
 
