--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a.subtle-link:hover {
 
         <p>Guests include the founders of Palantir, Tinder, Sweetgreen, Notion; investors at Thrive Capital, Emergence, Dragonfly, A*, Semianalysis; and more.</p>
 
-        <p>I feel grateful, proud, and privileged to spend every day learning & working alongside people I admire from across the world.</p>
+        <p>I feel grateful, proud, and privileged to spend every day learning & working alongside people I admire, from all across the world.</p>
 
         <hr>
 
